packages/typ/tests/fixtures/diagnostics/0230_adt_record_field_bool_int_10.ml.infer.expected
File "0230_adt_record_field_bool_int_10.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0230_adt_record_field_bool_int_10 is not a valid module name.

File "0230_adt_record_field_bool_int_10.ml", line 2, characters 36-38:
2 | let _ : rec_kappa = { key = 9; ok = 10 }
                                        ^^
Error: The constant 10 has type int but an expression was expected of type
         bool
